[gd_scene load_steps=25 format=3 uid="uid://dpuvfl1h5xo7l"]

[ext_resource type="Texture2D" uid="uid://pit08ec3mgem" path="res://UI/buttons/buttonsmallpressed.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dndgdn80hgnvp" path="res://UI/buttons/buttonsmall.png" id="2"]
[ext_resource type="PackedScene" uid="uid://b5m71reoyb3rd" path="res://LineEdit.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://bj5bcu35lnsq0" path="res://UI/LineEdit.png" id="4"]
[ext_resource type="Texture2D" uid="uid://die8077y5xo4h" path="res://UI/LineEditFocus.png" id="5"]
[ext_resource type="FontFile" uid="uid://cl2vm8bf54k8i" path="res://fonts/ARIALBD 1.TTF" id="6"]
[ext_resource type="Texture2D" uid="uid://bh7neancll7xb" path="res://UI/HugePanel.png" id="7"]
[ext_resource type="FontFile" path="res://fonts/wii.tres" id="8"]
[ext_resource type="Texture2D" uid="uid://djlgaf38iqw8w" path="res://UI/Triangle.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dkgrsyt650vc8" path="res://UI/Trianglepressed.png" id="10"]
[ext_resource type="Script" uid="uid://djkjo37c4ti0a" path="res://Function Presets/RotatingRails.gd" id="11"]
[ext_resource type="Theme" uid="uid://byp0imswcta2n" path="res://small.tres" id="12_ctb1r"]

[sub_resource type="FontFile" id="13"]
fallbacks = Array[Font]([ExtResource("6")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="14"]
texture = ExtResource("5")
region_rect = Rect2(0, 0, 645, 25)

[sub_resource type="StyleBoxTexture" id="15"]
texture = ExtResource("4")
region_rect = Rect2(0, 0, 645, 25)

[sub_resource type="Theme" id="16"]
PopupMenu/fonts/font = SubResource("13")
PopupMenu/icons/radio_checked = ExtResource("10")
PopupMenu/icons/radio_unchecked = ExtResource("9")
PopupMenu/styles/hover = SubResource("14")
PopupMenu/styles/panel = SubResource("15")

[sub_resource type="StyleBoxTexture" id="20"]

[sub_resource type="StyleBoxTexture" id="18"]
texture = ExtResource("2")
region_rect = Rect2(0, 0, 733, 320)

[sub_resource type="StyleBoxTexture" id="19"]
texture = ExtResource("1")
region_rect = Rect2(0, 0, 733, 320)

[sub_resource type="StyleBoxTexture" id="21"]
texture = ExtResource("2")
region_rect = Rect2(0, 0, 733, 320)

[sub_resource type="CompressedTexture2D" id="17"]

[sub_resource type="FontFile" id="22"]
fallbacks = Array[Font]([ExtResource("6")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/31/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/41/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/46/0/ascent = 0.0
cache/0/46/0/descent = 0.0
cache/0/46/0/underline_position = 0.0
cache/0/46/0/underline_thickness = 0.0
cache/0/46/0/scale = 1.0
cache/0/46/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/46/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="23"]
fallbacks = Array[Font]([ExtResource("6")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/31/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/41/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/46/0/ascent = 0.0
cache/0/46/0/descent = 0.0
cache/0/46/0/underline_position = 0.0
cache/0/46/0/underline_thickness = 0.0
cache/0/46/0/scale = 1.0
cache/0/46/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/46/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_ctb1r"]
fallbacks = Array[Font]([ExtResource("6")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/31/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/21/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/11/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/51/0/ascent = 0.0
cache/0/51/0/descent = 0.0
cache/0/51/0/underline_position = 0.0
cache/0/51/0/underline_thickness = 0.0
cache/0/51/0/scale = 1.0
cache/0/56/0/ascent = 0.0
cache/0/56/0/descent = 0.0
cache/0/56/0/underline_position = 0.0
cache/0/56/0/underline_thickness = 0.0
cache/0/56/0/scale = 1.0
cache/0/61/0/ascent = 0.0
cache/0/61/0/descent = 0.0
cache/0/61/0/underline_position = 0.0
cache/0/61/0/underline_thickness = 0.0
cache/0/61/0/scale = 1.0
cache/0/66/0/ascent = 0.0
cache/0/66/0/descent = 0.0
cache/0/66/0/underline_position = 0.0
cache/0/66/0/underline_thickness = 0.0
cache/0/66/0/scale = 1.0
cache/0/71/0/ascent = 0.0
cache/0/71/0/descent = 0.0
cache/0/71/0/underline_position = 0.0
cache/0/71/0/underline_thickness = 0.0
cache/0/71/0/scale = 1.0
cache/0/76/0/ascent = 0.0
cache/0/76/0/descent = 0.0
cache/0/76/0/underline_position = 0.0
cache/0/76/0/underline_thickness = 0.0
cache/0/76/0/scale = 1.0
cache/0/81/0/ascent = 0.0
cache/0/81/0/descent = 0.0
cache/0/81/0/underline_position = 0.0
cache/0/81/0/underline_thickness = 0.0
cache/0/81/0/scale = 1.0
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0

[node name="Functions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11")

[node name="HugePanel" type="Sprite2D" parent="."]
position = Vector2(-122, 400)
texture = ExtResource("7")

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 313.0
offset_right = 207.0
offset_bottom = 399.0
theme = SubResource("16")
theme_override_fonts/font = ExtResource("8")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("20")
theme_override_styles/hover = SubResource("18")
theme_override_styles/pressed = SubResource("19")
theme_override_styles/normal = SubResource("21")
theme_override_icons/arrow = SubResource("17")
alignment = 1

[node name="X" parent="." instance=ExtResource("3")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 253.0
offset_top = 312.0
offset_right = 433.0
offset_bottom = 372.0
theme_override_fonts/font = SubResource("22")
theme_override_font_sizes/font_size = 46

[node name="Y" parent="." instance=ExtResource("3")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 474.0
offset_top = 312.0
offset_right = 654.0
offset_bottom = 372.0
theme_override_fonts/font = SubResource("22")
theme_override_font_sizes/font_size = 46

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 274.0
offset_right = 208.0
offset_bottom = 312.0
pivot_offset = Vector2(143, 10)
theme_override_fonts/normal_font = SubResource("23")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "Point"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 278.0
offset_top = 274.0
offset_right = 616.0
offset_bottom = 310.0
pivot_offset = Vector2(189, 14)
theme_override_fonts/normal_font = SubResource("23")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "Position"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 317.0
offset_right = 253.0
offset_bottom = 353.0
pivot_offset = Vector2(189, 14)
theme_override_fonts/normal_font = SubResource("23")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "X:"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 317.0
offset_right = 474.0
offset_bottom = 353.0
pivot_offset = Vector2(189, 14)
theme_override_fonts/normal_font = SubResource("23")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "Y:"

[node name="Rotation" parent="." instance=ExtResource("3")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 142.0
offset_top = 422.0
offset_right = 322.0
offset_bottom = 482.0
theme_override_fonts/font = SubResource("22")
theme_override_font_sizes/font_size = 46

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 427.0
offset_right = 144.0
offset_bottom = 463.0
pivot_offset = Vector2(189, 14)
theme_override_fonts/normal_font = SubResource("23")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "Rotation:"

[node name="RichTextLabel8" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 492.0
offset_right = 433.0
offset_bottom = 528.0
pivot_offset = Vector2(189, 14)
theme_override_fonts/normal_font = SubResource("23")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "Rotation Point:"

[node name="Speed" parent="." instance=ExtResource("3")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 454.0
offset_top = 422.0
offset_right = 634.0
offset_bottom = 482.0
theme_override_fonts/font = SubResource("22")
theme_override_font_sizes/font_size = 46

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 339.0
offset_top = 427.0
offset_right = 450.0
offset_bottom = 463.0
pivot_offset = Vector2(85, 19)
theme_override_fonts/normal_font = SubResource("23")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "Speed:"

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 450.0
offset_right = 661.0
offset_bottom = 552.0
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(85, 19)
theme_override_fonts/normal_font = SubResource("23")
bbcode_enabled = true
text = "*only shown in game"

[node name="RotatingPoint" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 231.0
offset_top = 538.0
offset_right = 399.0
offset_bottom = 615.0
theme = ExtResource("12_ctb1r")
theme_override_font_sizes/font_size = 50
alignment = 1
allow_reselect = true

[node name="RichTextLabel14" type="RichTextLabel" parent="."]
offset_left = 1.0
offset_top = -3.0
offset_right = 638.0
offset_bottom = 73.0
pivot_offset = Vector2(189, 14)
mouse_filter = 2
theme_override_fonts/normal_font = SubResource("FontFile_ctb1r")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "Rail Type:"
horizontal_alignment = 1

[node name="Type" type="OptionButton" parent="."]
offset_left = 5.0
offset_top = 67.0
offset_right = 635.0
offset_bottom = 141.0
theme = ExtResource("12_ctb1r")
theme_override_font_sizes/font_size = 60
alignment = 1
selected = 0
item_count = 18
popup/item_0/text = "Red"
popup/item_0/id = 1000
popup/item_1/text = "Blue"
popup/item_1/id = 1200
popup/item_2/text = "Invisible"
popup/item_2/id = 0
popup/item_3/text = "Music"
popup/item_3/id = 5100
popup/item_4/text = "Red Message Rotate L"
popup/item_4/id = 5010
popup/item_5/text = "Red Message Rotate R"
popup/item_5/id = 5011
popup/item_6/text = "Red Message Tilt L"
popup/item_6/id = 5012
popup/item_7/text = "Red Message Tilt R"
popup/item_7/id = 5013
popup/item_8/text = "Red Message Press L"
popup/item_8/id = 5040
popup/item_9/text = "Red Message Press R"
popup/item_9/id = 5041
popup/item_10/text = "Red Message Be Brave!"
popup/item_10/id = 5060
popup/item_11/text = "Blue Message Rotate L"
popup/item_11/id = 5210
popup/item_12/text = "Blue Message Rotate R"
popup/item_12/id = 5211
popup/item_13/text = "Blue Message Tilt L"
popup/item_13/id = 5212
popup/item_14/text = "Blue Message Tilt R"
popup/item_14/id = 5213
popup/item_15/text = "Blue Message Press L"
popup/item_15/id = 5240
popup/item_16/text = "Blue Message Press R"
popup/item_16/id = 5241
popup/item_17/text = "Blue Message Be Brave!"
popup/item_17/id = 5260

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="X" to="." method="_on_X_text_changed"]
[connection signal="text_changed" from="Y" to="." method="_on_Y_text_changed"]
[connection signal="text_changed" from="Rotation" to="." method="_on_Rotation_text_changed"]
[connection signal="text_changed" from="Speed" to="." method="_on_Speed_text_changed"]
[connection signal="item_selected" from="RotatingPoint" to="." method="_on_rotating_point_item_selected"]
